--- a/stylehub-client/package.json
+++ b/stylehub-client/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -46,6 +51,8 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.19",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^4.1.17"
   }
