--- a/stylehub-client/package.json
+++ b/stylehub-client/package.json
@@ -24,6 +24,11 @@
     "swiper": "^12.0.3",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "react-scripts": {
+      "postcss": "^8.4.39"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
