--- a/stylehub-client/package.json
+++ b/stylehub-client/package.json
@@ -30,9 +30,9 @@
     }
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.19",
     "eslint-config-react-app": "^7.0.1",
